Modified install instructions